--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="topbar">
-  <a href="/carro">
-    <button class="botao">Carro</button>
+  <a >
+    <button class="botao" [routerLink]="['/']">Carro</button>
   </a>
-  <a  href="/marca">
-    <button class="botao">Marca</button>
+  <a  >
+    <button class="botao" [routerLink]="['/marca']">Marca</button>
   </a>
 </div>
 <router-outlet></router-outlet>
