--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .topbar {
   overflow: hidden;
   text-align: center;
-  padding: 14px 16px;
+  padding: 15px;
   text-align: left;
   font-size: 17px;
   text-decoration: none;
@@ -9,10 +9,10 @@
   margin: -10px;
 }
 .botao {
-  background-color: rgba(51, 51, 51, 0.05);
+  background-color: white;
   border-radius: 8px;
   border-width: 0;
-  color: #333333;
+  color: black;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
@@ -23,9 +23,11 @@
   padding: 10px 12px;
   text-align: center;
   transition: all 200ms;
-  vertical-align: baseline;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+}
+.botao:active{
+  background-color: #bac8e5;
+}
+
+router-outlet{
+  padding: 10px;
 }
