--- a/src/app/component/brand/add-brand/add-brand.component.html
+++ b/src/app/component/brand/add-brand/add-brand.component.html
@@ -1,3 +1,7 @@
-<div>
-
-</div>
+<form class="form-group" [formGroup]="formulario" (ngSubmit)="onSubmit()">
+  <div class="form-group" >
+    <label for="exampleFormControlInput1">Nome da marca</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" formControlName="name">
+  </div>
+  <button type="submit" class="btn btn-primary">Salvar</button>
+</form>
