--- a/src/app/component/car/add-car/addcar.component.html
+++ b/src/app/component/car/add-car/addcar.component.html
@@ -1,1 +1,35 @@
-<p>addcar works!</p>
+<form class="form-group" [formGroup]="formulario" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label>Nome do carro</label>
+    <input type="text" class="form-control" formControlName="name">
+  </div>
+  <div class="form-group">
+    <label>Modelo</label>
+    <input type="text" class="form-control" formControlName="model">
+  </div>
+  <div class="form-group">
+    <label>Ano</label>
+    <input type="text" class="form-control" formControlName="year">
+  </div>
+  <div class="form-group">
+    <label>Cor</label>
+    <input type="text" class="form-control" formControlName="color">
+  </div>
+  <div class="form-group">
+    <label>Categoria</label>
+    <select class="form-control" formControlName="category">
+      <option></option>
+      <option>CARRO</option>
+      <option>MOTOCICLETA</option>
+      <option>CAMINHAO</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label>Marca</label>
+    <select class="form-control" formControlName="brandId">
+      <option></option>
+      <option *ngFor="let marca of listaMarcas">{{marca.name}}</option>
+    </select>
+  </div>
+  <button type="submit" class="btn btn-primary">Salvar</button>
+</form>
