--- a/src/app/component/brand/add-brand/add-brand.component.html
+++ b/src/app/component/brand/add-brand/add-brand.component.html
@@ -1,7 +1,7 @@
 <form class="form-group" [formGroup]="formulario" (ngSubmit)="onSubmit()">
-  <div class="form-group" >
-    <label for="exampleFormControlInput1">Nome da marca</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" formControlName="name">
+  <div class="form-group">
+    <label>Nome da marca</label>
+    <input type="text" class="form-control" formControlName="name">
   </div>
   <button type="submit" class="btn btn-primary">Salvar</button>
 </form>
