Final antes da correção

--- a/src/app/component/brand/brand/brand.component.html
+++ b/src/app/component/brand/brand/brand.component.html
@@ -7,7 +7,7 @@
     <thead>
     <tr>
       <th class="column">Nome</th>
-      <th class="column">Deletar</th>
+     <!-- <th class="column">Deletar</th> -->
     </tr>
     </thead>
     <tbody>
